Update 01. Selecting Subsets of Data from DataFrames with just the brackets.ipynb

--- a/03. Selecting Subsets of Data/01. Selecting Subsets of Data from DataFrames with just the brackets.ipynb
+++ b/03. Selecting Subsets of Data/01. Selecting Subsets of Data from DataFrames with just the brackets.ipynb
@@ -207,7 +207,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('../data/sample_data.csv', index_col=0)\n",
+    "df = pd.read_csv('../data/sample_data.csv', index_col=0)\n", # index_col = 0 means take the 1st column and make it the index 
     "df"
    ]
   },
